test/Parsing/err-column-number.fab
#
# RUN: fab --print-dag --format=null %s 2> %t || true
# RUN: FileCheck %s -input-file %t
#

# CHECK: err-column-number.fab:16:9: error: reference to undefined value

a_submodule = import('Inputs/submodule.fab');

foo = action('${FOO} ${src} -o ${output}' <- src:file[in], output:file[out]);

bar = function(src:file, outname:string): file
{
	baz = foo(src, file(outname));

	nothing
};
